Enhance NaCl description in index.html
Added additional information about NaCl usage.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="molecule-entry">
         <div class="molecule-title">NaCl (Sodium Chloride)</div>
         <div class="knowledge-box">
-            Ionic lattice. Ions are gathered together by electrostatic attraction without covalent "sticks".
+            Ionic lattice. Ions are gathered together by electrostatic attraction without covalent "sticks". It is used in the meals. It is a widespread kind of salt
         </div>
         <div id="nacl-box" class="canvas-3d"></div>
     </div>
