--- a/index.html
+++ b/index.html
@@ -162,11 +162,16 @@
         </div>
         <div id="ki-box" class="canvas-3d"></div>
     </div>
-    <script>
+
+ <script>
     // --- CORE 3D ENGINE ---
     function renderMolecule(id, atoms, bonds, isIonic = false, zoom = 5) {
         const el = document.getElementById(id);
-        if(!el) return;
+        if(!el) {
+            console.error("Could not find element: " + id);
+            return;
+        }
+        
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(50, el.clientWidth/el.clientHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -180,7 +185,6 @@
         light.position.set(10, 10, 10);
         scene.add(light);
 
-        // Draw Atoms
         atoms.forEach(a => {
             const sphere = new THREE.Mesh(
                 new THREE.SphereGeometry(a.s, 32, 32),
@@ -190,100 +194,69 @@
             scene.add(sphere);
         });
 
-        // Draw Bonds
-        bonds.forEach(b => {
-            const start = new THREE.Vector3(atoms[b.f].x, atoms[b.f].y, atoms[b.f].z);
-            const end = new THREE.Vector3(atoms[b.t].x, atoms[b.t].y, atoms[b.t].z);
-            const dist = start.distanceTo(end);
-            const cyl = new THREE.Mesh(
-                new THREE.CylinderGeometry(0.08, 0.08, dist, 16),
-                new THREE.MeshPhongMaterial({ color: 0xffffff })
-            );
-            cyl.position.copy(start.clone().lerp(end, 0.5));
-            cyl.quaternion.setFromUnitVectors(new THREE.Vector3(0, 1, 0), end.clone().sub(start).normalize());
-            scene.add(cyl);
-        });
+        if (!isIonic) {
+            bonds.forEach(b => {
+                const start = new THREE.Vector3(atoms[b.f].x, atoms[b.f].y, atoms[b.f].z);
+                const end = new THREE.Vector3(atoms[b.t].x, atoms[b.t].y, atoms[b.t].z);
+                const dist = start.distanceTo(end);
+                const cyl = new THREE.Mesh(
+                    new THREE.CylinderGeometry(0.08, 0.08, dist, 16),
+                    new THREE.MeshPhongMaterial({ color: 0xffffff })
+                );
+                cyl.position.copy(start.clone().lerp(end, 0.5));
+                cyl.quaternion.setFromUnitVectors(new THREE.Vector3(0, 1, 0), end.clone().sub(start).normalize());
+                scene.add(cyl);
+            });
+        }
 
         camera.position.z = zoom;
         function anim() { requestAnimationFrame(anim); scene.rotation.y += 0.01; renderer.render(scene, camera); }
         anim();
     }
 
-    // --- SUBSTANCE LIST ---
+    // --- EXECUTE ON LOAD ---
+    // This part ensures HCL and H2O appear!
+    window.onload = function() {
+        // 1. HCl
+        renderMolecule('hcl-box', [{c:0xff0000, s:0.7, x:-0.6, y:0, z:0}, {c:0x00ff00, s:0.4, x:0.6, y:0, z:0}], [{f:0, t:1}]);
 
-    // 1. HCl
-    renderMolecule('hcl-box', [{c:0xff0000, s:0.7, x:-0.6, y:0, z:0}, {c:0x00ff00, s:0.4, x:0.6, y:0, z:0}], [{f:0, t:1}]);
+        // 2. H2O
+        renderMolecule('h2o-box', [{c:0x00ff00, s:0.6, x:0, y:0.3, z:0}, {c:0x0000ff, s:0.4, x:-0.6, y:-0.4, z:0}, {c:0x0000ff, s:0.4, x:0.6, y:-0.4, z:0}], [{f:0, t:1}, {f:0, t:2}]);
 
-    // 2. H2O
-    renderMolecule('h2o-box', [{c:0x00ff00, s:0.6, x:0, y:0.3, z:0}, {c:0x0000ff, s:0.4, x:-0.6, y:-0.4, z:0}, {c:0x0000ff, s:0.4, x:0.6, y:-0.4, z:0}], [{f:0, t:1}, {f:0, t:2}]);
+        // 3. Glucose
+        const gA = [{c:0x333333,s:0.5,x:1,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0x333333,s:0.5,x:-0.5,y:-0.8,z:-0.5},{c:0x333333,s:0.5,x:0.5,y:-0.8,z:-0.5},{c:0xff0000,s:0.4,x:1.8,y:0,z:0},{c:0xff0000,s:0.4,x:1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1.8,y:0,z:0},{c:0xff0000,s:0.4,x:-1,y:-1.5,z:-1},{c:0xff0000,s:0.4,x:1,y:-1.5,z:-1},{c:0xeeeeee,s:0.2,x:1,y:0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-1,y:0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:-0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:-2,z:-1},{c:0xeeeeee,s:0.2,x:0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:1.5,y:-2,z:-1}];
+        renderMolecule('glucose-box', gA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:4},{f:4,t:5},{f:5,t:0}], false, 8);
 
-    // 3. Glucose
-    const gA = [{c:0x333333,s:0.5,x:1,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0x333333,s:0.5,x:-0.5,y:-0.8,z:-0.5},{c:0x333333,s:0.5,x:0.5,y:-0.8,z:-0.5},{c:0xff0000,s:0.4,x:1.8,y:0,z:0},{c:0xff0000,s:0.4,x:1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1.8,y:0,z:0},{c:0xff0000,s:0.4,x:-1,y:-1.5,z:-1},{c:0xff0000,s:0.4,x:1,y:-1.5,z:-1},{c:0xeeeeee,s:0.2,x:1,y:0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-1,y:0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:-0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:-2,z:-1},{c:0xeeeeee,s:0.2,x:0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:1.5,y:-2,z:-1}];
-    renderMolecule('glucose-box', gA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:4},{f:4,t:5},{f:5,t:0}], false, 8);
+        // 4. NaCl (Ionic)
+        const nA = [{c:0x8A2BE2,s:0.65,x:-0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:-0.6,z:0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:-0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:-0.6,y:-0.6,z:-0.6},{c:0x00ff00,s:0.65,x:0.6,y:-0.6,z:-0.6}];
+        renderMolecule('nacl-box', nA, [], true, 5);
 
-    // 4. NaCl
-    const nA = [{c:0x8A2BE2,s:0.65,x:-0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:-0.6,z:0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:-0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:-0.6,y:-0.6,z:-0.6},{c:0x00ff00,s:0.65,x:0.6,y:-0.6,z:-0.6}];
-    renderMolecule('nacl-box', nA, [], true, 5);
+        // 5. Ethanol
+        const eA = [{c:0x333333,s:0.5,x:-0.7,y:0,z:0},{c:0x333333,s:0.5,x:0.7,y:0,z:0},{c:0xff0000,s:0.45,x:1.5,y:0.7,z:0},{c:0xeeeeee,s:0.25,x:2.1,y:0.3,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:0.7,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.7,z:-0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:0,z:-1},{c:0xeeeeee,s:0.25,x:0.7,y:-0.8,z:0.5},{c:0xeeeeee,s:0.25,x:0.7,y:0.8,z:-0.5}];
+        renderMolecule('ethanol-box', eA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:0,t:4},{f:0,t:5},{f:0,t:6},{f:1,t:7},{f:1,t:8}]);
 
-    // 5. Ethanol
-    const eA = [{c:0x333333,s:0.5,x:-0.7,y:0,z:0},{c:0x333333,s:0.5,x:0.7,y:0,z:0},{c:0xff0000,s:0.45,x:1.5,y:0.7,z:0},{c:0xeeeeee,s:0.25,x:2.1,y:0.3,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:0.7,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.7,z:-0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:0,z:-1},{c:0xeeeeee,s:0.25,x:0.7,y:-0.8,z:0.5},{c:0xeeeeee,s:0.25,x:0.7,y:0.8,z:-0.5}];
-    renderMolecule('ethanol-box', eA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:0,t:4},{f:0,t:5},{f:0,t:6},{f:1,t:7},{f:1,t:8}]);
+        // 6. NaOH
+        renderMolecule('naoh-box', [{c:0x8A2BE2, s:0.65, x:-0.6, y:0, z:0}, {c:0xff0000, s:0.65, x:0.6, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.3, y:0, z:0}], [{f:1, t:2}], false, 5);
 
-    // 6. NaOH
-    renderMolecule('naoh-box', [{c:0x8A2BE2, s:0.65, x:-0.6, y:0, z:0}, {c:0xff0000, s:0.65, x:0.6, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.3, y:0, z:0}], [{f:1, t:2}], false, 5);
+        // 7. Sulfuric Acid
+        const h2so4Atoms = [{c:0xffff00,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:0,y:-1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:0,z:0.5},{c:0xff0000,s:0.5,x:-1.1,y:0,z:-0.5},{c:0xeeeeee,s:0.25,x:1.6,y:0.6,z:0.5},{c:0xeeeeee,s:0.25,x:-1.6,y:-0.6,z:-0.5}];
+        renderMolecule('h2so4-box', h2so4Atoms, [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:3,t:5},{f:4,t:6}], false, 7);
 
-    // 7. Sulfuric Acid (H2SO4)
-    // Sulfur is Yellow (0xffff00), Oxygen is Red, Hydrogen is White
-    const h2so4Atoms = [
-        {c:0xffff00, s:0.65, x:0, y:0, z:0},    // Sulfur (0)
-        {c:0xff0000, s:0.5, x:0, y:1.2, z:0},   // Oxygen top (1)
-        {c:0xff0000, s:0.5, x:0, y:-1.2, z:0},  // Oxygen bottom (2)
-        {c:0xff0000, s:0.5, x:1.1, y:0, z:0.5}, // Oxygen side A (3)
-        {c:0xff0000, s:0.5, x:-1.1, y:0, z:-0.5},// Oxygen side B (4)
-        {c:0xeeeeee, s:0.25, x:1.6, y:0.6, z:0.5}, // H (on O3)
-        {c:0xeeeeee, s:0.25, x:-1.6, y:-0.6, z:-0.5}// H (on O4)
-    ];
-    const h2so4Bonds = [
-        {f:0, t:1}, {f:0, t:2}, {f:0, t:3}, {f:0, t:4}, // S to all O's
-        {f:3, t:5}, {f:4, t:6} // O to H's
-    ];
-    renderMolecule('h2so4-box', h2so4Atoms, h2so4Bonds, false, 7);
+        // 8. KOH
+        renderMolecule('koh-box', [{c:0xc381fd,s:0.7,x:-0.7,y:0,z:0},{c:0xff0000,s:0.65,x:0.7,y:0,z:0},{c:0xeeeeee,s:0.35,x:1.4,y:0,z:0}], [{f:1,t:2}], false, 5);
 
-// 8. Potassium Hydroxide (KOH)
-    // Potassium is often represented as Violet/Light Purple (0xc381fd)
-    const kohAtoms = [
-        {c:0xc381fd, s:0.7, x:-0.7, y:0, z:0},  // K+ (Potassium)
-        {c:0xff0000, s:0.65, x:0.7, y:0, z:0},  // O (Oxygen)
-        {c:0xeeeeee, s:0.35, x:1.4, y:0, z:0}   // H (Hydrogen)
-    ];
-    // Bond only O to H (covalent part). K is held next to it (ionic).
-    renderMolecule('koh-box', kohAtoms, [{f:1, t:2}], false, 5);
-           // 9. Nitric Acid (HNO3)
-    // Nitrogen is Blue (0x0000ff), Oxygen is Red, Hydrogen is White
-    const hno3Atoms = [
-        {c:0x0000ff, s:0.55, x:0, y:0, z:0},    // Nitrogen (0)
-        {c:0xff0000, s:0.5, x:0, y:1.2, z:0},   // Oxygen top (1)
-        {c:0xff0000, s:0.5, x:1.1, y:-0.6, z:0},// Oxygen bottom-right (2)
-        {c:0xff0000, s:0.5, x:-1.1, y:-0.6, z:0},// Oxygen bottom-left (3)
-        {c:0xeeeeee, s:0.25, x:-1.8, y:-0.2, z:0}// Hydrogen (on O3)
-    ];
-    const hno3Bonds = [
-        {f:0, t:1}, {f:0, t:2}, {f:0, t:3}, // N to all O's
-        {f:3, t:4} // O to H
-    ];
-    renderMolecule('hno3-box', hno3Atoms, hno3Bonds, false, 6);
+        // 9. Nitric Acid
+        const hno3Atoms = [{c:0x0000ff,s:0.55,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:-0.6,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.8,y:-0.2,z:0}];
+        renderMolecule('hno3-box', hno3Atoms, [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:3,t:4}], false, 6);
 
-        // 10. Potassium Iodide (KI)
-    // Potassium is Violet (0xc381fd), Iodide is Dark Purple/Gray (0x4b0082)
-     const kiAtoms = [
-        {c:0xffff00, s:0.65, x:-0.65, y:0.65, z:0.65}, {c:0x4b0082, s:0.65, x:0.65, y:0.65, z:0.65}, 
-        {c:0x4b0082, s:0.65, x:-0.65, y:-0.65, z:0.65}, {c:0xffff00, s:0.65, x:0.65, y:-0.65, z:0.65},
-        {c:0x4b0082, s:0.65, x:-0.65, y:0.65, z:-0.65}, {c:0xffff00, s:0.65, x:0.65, y:0.65, z:-0.65},
-        {c:0xffff00, s:0.65, x:-0.65, y:-0.65, z:-0.65},{c:0x4b0082, s:0.65, x:0.65, y:-0.65, z:-0.65}
-    ];
-    // isIonic = true (Removes the cylinders)
-    renderMolecule('ki-box', kiAtoms, [], true, 5);
+        // 10. Potassium Iodide (KI) - Yellow/Purple consistent version
+        const kiSize = 0.65;
+        const kiAtoms = [{c:0xffff00,s:kiSize,x:-0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:-0.65,z:0.65},{c:0xffff00,s:kiSize,x:0.65,y:-0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:-0.65,y:-0.65,z:-0.65},{c:0x4b0082,s:kiSize,x:0.65,y:-0.65,z:-0.65}];
+        renderMolecule('ki-box', kiAtoms, [], true, 5);
+    };
+
     function searchMolecule() { alert("Search: " + document.getElementById('mol-search').value); }
-        </script>
+    </script>
+
 </body>
 </html>
