--- a/index.html
+++ b/index.html
@@ -162,11 +162,15 @@
         </div>
         <div id="ki-box" class="canvas-3d"></div>
     </div>
-<script>
+
+    <script>
     // --- CORE 3D ENGINE ---
     function renderMolecule(id, atoms, bonds, isIonic = false, zoom = 5) {
         const el = document.getElementById(id);
-        if(!el) return; // Skips if the box isn't found to prevent errors
+        if(!el) {
+            console.warn("Skipping " + id + " - element not found.");
+            return;
+        }
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(50, el.clientWidth/el.clientHeight, 0.1, 1000);
@@ -214,46 +218,45 @@
         anim();
     }
 
-    // --- INITIALIZATION BLOCK ---
-    // This function runs only when the window has fully loaded everything
+    // --- FORCED DELAY LOAD ---
     window.onload = function() {
-        
-        // 1. HCl
-        renderMolecule('hcl-box', [{c:0xff0000, s:0.7, x:-0.6, y:0, z:0}, {c:0x00ff00, s:0.4, x:0.6, y:0, z:0}], [{f:0, t:1}]);
+        // We wait 100 milliseconds to be absolutely sure the DOM is ready
+        setTimeout(() => {
+            // 1. HCl
+            renderMolecule('hcl-box', [{c:0xff0000, s:0.7, x:-0.6, y:0, z:0}, {c:0x00ff00, s:0.4, x:0.6, y:0, z:0}], [{f:0, t:1}]);
 
-        // 2. H2O
-        renderMolecule('h2o-box', [{c:0x00ff00, s:0.6, x:0, y:0.3, z:0}, {c:0x0000ff, s:0.4, x:-0.6, y:-0.4, z:0}, {c:0x0000ff, s:0.4, x:0.6, y:-0.4, z:0}], [{f:0, t:1}, {f:0, t:2}]);
+            // 2. H2O
+            renderMolecule('h2o-box', [{c:0x00ff00, s:0.6, x:0, y:0.3, z:0}, {c:0x0000ff, s:0.4, x:-0.6, y:-0.4, z:0}, {c:0x0000ff, s:0.4, x:0.6, y:-0.4, z:0}], [{f:0, t:1}, {f:0, t:2}]);
 
-        // 3. Glucose
-        const gA = [{c:0x333333,s:0.5,x:1,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0x333333,s:0.5,x:-0.5,y:-0.8,z:-0.5},{c:0x333333,s:0.5,x:0.5,y:-0.8,z:-0.5},{c:0xff0000,s:0.4,x:1.8,y:0,z:0},{c:0xff0000,s:0.4,x:1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1.8,y:0,z:0},{c:0xff0000,s:0.4,x:-1,y:-1.5,z:-1},{c:0xff0000,s:0.4,x:1,y:-1.5,z:-1},{c:0xeeeeee,s:0.2,x:1,y:0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-1,y:0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:-0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:-2,z:-1},{c:0xeeeeee,s:0.2,x:0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:1.5,y:-2,z:-1}];
-        renderMolecule('glucose-box', gA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:4},{f:4,t:5},{f:5,t:0}], false, 8);
+            // 3. Glucose
+            const gA = [{c:0x333333,s:0.5,x:1,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0x333333,s:0.5,x:-0.5,y:-0.8,z:-0.5},{c:0x333333,s:0.5,x:0.5,y:-0.8,z:-0.5},{c:0xff0000,s:0.4,x:1.8,y:0,z:0},{c:0xff0000,s:0.4,x:1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1.8,y:0,z:0},{c:0xff0000,s:0.4,x:-1,y:-1.5,z:-1},{c:0xff0000,s:0.4,x:1,y:-1.5,z:-1},{c:0xeeeeee,s:0.2,x:1,y:0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-1,y:0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:-0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:-2,z:-1},{c:0xeeeeee,s:0.2,x:0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:1.5,y:-2,z:-1}];
+            renderMolecule('glucose-box', gA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:4},{f:4,t:5},{f:5,t:0}], false, 8);
 
-        // 4. NaCl
-        const nA = [{c:0x8A2BE2,s:0.65,x:-0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:-0.6,z:0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:-0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:-0.6,y:-0.6,z:-0.6},{c:0x00ff00,s:0.65,x:0.6,y:-0.6,z:-0.6}];
-        renderMolecule('nacl-box', nA, [], true, 5);
+            // 4. NaCl
+            const nA = [{c:0x8A2BE2,s:0.65,x:-0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:-0.6,z:0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:-0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:-0.6,y:-0.6,z:-0.6},{c:0x00ff00,s:0.65,x:0.6,y:-0.6,z:0.6}];
+            renderMolecule('nacl-box', nA, [], true, 5);
 
-        // 5. Ethanol
-        const eA = [{c:0x333333,s:0.5,x:-0.7,y:0,z:0},{c:0x333333,s:0.5,x:0.7,y:0,z:0},{c:0xff0000,s:0.45,x:1.5,y:0.7,z:0},{c:0xeeeeee,s:0.25,x:2.1,y:0.3,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:0.7,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.7,z:-0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:0,z:-1},{c:0xeeeeee,s:0.25,x:0.7,y:-0.8,z:0.5},{c:0xeeeeee,s:0.25,x:0.7,y:0.8,z:-0.5}];
-        renderMolecule('ethanol-box', eA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:0,t:4},{f:0,t:5},{f:0,t:6},{f:1,t:7},{f:1,t:8}]);
+            // 5. Ethanol
+            const eA = [{c:0x333333,s:0.5,x:-0.7,y:0,z:0},{c:0x333333,s:0.5,x:0.7,y:0,z:0},{c:0xff0000,s:0.45,x:1.5,y:0.7,z:0},{c:0xeeeeee,s:0.25,x:2.1,y:0.3,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:0.7,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.7,z:-0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:0,z:-1},{c:0xeeeeee,s:0.25,x:0.7,y:-0.8,z:0.5},{c:0xeeeeee,s:0.25,x:0.7,y:0.8,z:-0.5}];
+            renderMolecule('ethanol-box', eA, [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:0,t:4},{f:0,t:5},{f:0,t:6},{f:1,t:7},{f:1,t:8}]);
 
-        // 6. NaOH
-        renderMolecule('naoh-box', [{c:0x8A2BE2, s:0.65, x:-0.6, y:0, z:0}, {c:0xff0000, s:0.65, x:0.6, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.3, y:0, z:0}], [{f:1, t:2}], false, 5);
+            // 6. NaOH
+            renderMolecule('naoh-box', [{c:0x8A2BE2, s:0.65, x:-0.6, y:0, z:0}, {c:0xff0000, s:0.65, x:0.6, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.3, y:0, z:0}], [{f:1, t:2}], false, 5);
 
-        // 7. Sulfuric Acid
-        const h2so4Atoms = [{c:0xffff00,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:0,y:-1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:0,z:0.5},{c:0xff0000,s:0.5,x:-1.1,y:0,z:-0.5},{c:0xeeeeee,s:0.25,x:1.6,y:0.6,z:0.5},{c:0xeeeeee,s:0.25,x:-1.6,y:-0.6,z:-0.5}];
-        renderMolecule('h2so4-box', h2so4Atoms, [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:3,t:5},{f:4,t:6}], false, 7);
+            // 7. Sulfuric Acid
+            renderMolecule('h2so4-box', [{c:0xffff00,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:0,y:-1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:0,z:0.5},{c:0xff0000,s:0.5,x:-1.1,y:0,z:-0.5},{c:0xeeeeee,s:0.25,x:1.6,y:0.6,z:0.5},{c:0xeeeeee,s:0.25,x:-1.6,y:-0.6,z:-0.5}], [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:3,t:5},{f:4,t:6}], false, 7);
 
-        // 8. KOH
-        renderMolecule('koh-box', [{c:0xc381fd, s:0.7, x:-0.7, y:0, z:0}, {c:0xff0000, s:0.65, x:0.7, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.4, y:0, z:0}], [{f:1, t:2}], false, 5);
+            // 8. KOH
+            renderMolecule('koh-box', [{c:0xc381fd, s:0.7, x:-0.7, y:0, z:0}, {c:0xff0000, s:0.65, x:0.7, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.4, y:0, z:0}], [{f:1, t:2}], false, 5);
 
-        // 9. Nitric Acid
-        const hno3Atoms = [{c:0x0000ff,s:0.55,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:-0.6,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.8,y:-0.2,z:0}];
-        renderMolecule('hno3-box', hno3Atoms, [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:3,t:4}], false, 6);
+            // 9. Nitric Acid
+            renderMolecule('hno3-box', [{c:0x0000ff,s:0.55,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:-0.6,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.8,y:-0.2,z:0}], [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:3,t:4}], false, 6);
 
-        // 10. Potassium Iodide (KI)
-        const kiSize = 0.65;
-        const kiAtoms = [{c:0xffff00,s:kiSize,x:-0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:-0.65,z:0.65},{c:0xffff00,s:kiSize,x:0.65,y:-0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:-0.65,y:-0.65,z:-0.65},{c:0x4b0082,s:kiSize,x:0.65,y:-0.65,z:-0.65}];
-        renderMolecule('ki-box', kiAtoms, [], true, 5);
+            // 10. Potassium Iodide (KI)
+            const kiSize = 0.65;
+            const kiAtoms = [{c:0xffff00,s:kiSize,x:-0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:0.65,y:0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:-0.65,z:0.65},{c:0xffff00,s:kiSize,x:0.65,y:-0.65,z:0.65},{c:0x4b0082,s:kiSize,x:-0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:0.65,y:0.65,z:-0.65},{c:0xffff00,s:kiSize,x:-0.65,y:-0.65,z:-0.65},{c:0x4b0082,s:kiSize,x:0.65,y:-0.65,z:-0.65}];
+            renderMolecule('ki-box', kiAtoms, [], true, 5);
+        }, 100);
     };
 
     function searchMolecule() { alert("Search: " + document.getElementById('mol-search').value); }
