--- a/index.html
+++ b/index.html
@@ -169,7 +169,22 @@
         {id: 'hcl-box', a: [{c:0xff0000, s:0.7, x:-0.6, y:0, z:0}, {c:0x00ff00, s:0.4, x:0.6, y:0, z:0}], b: [{f:0, t:1}], i: false, z: 5},
         {id: 'h2o-box', a: [{c:0x00ff00, s:0.6, x:0, y:0.3, z:0}, {c:0x0000ff, s:0.4, x:-0.6, y:-0.4, z:0}, {c:0x0000ff, s:0.4, x:0.6, y:-0.4, z:0}], b: [{f:0, t:1}, {f:0, t:2}], i: false, z: 5},
         {id: 'glucose-box', a: [{c:0x333333,s:0.5,x:1,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-0.5,y:0.8,z:0.5},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0x333333,s:0.5,x:-0.5,y:-0.8,z:-0.5},{c:0x333333,s:0.5,x:0.5,y:-0.8,z:-0.5},{c:0xff0000,s:0.4,x:1.8,y:0,z:0},{c:0xff0000,s:0.4,x:1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1,y:1.5,z:1},{c:0xff0000,s:0.4,x:-1.8,y:0,z:0},{c:0xff0000,s:0.4,x:-1,y:-1.5,z:-1},{c:0xff0000,s:0.4,x:1,y:-1.5,z:-1},{c:0xeeeeee,s:0.2,x:1,y:0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-0.5,y:1.2,z:-0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:2,z:1},{c:0xeeeeee,s:0.2,x:-1,y:0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-2.5,y:0.5,z:0},{c:0xeeeeee,s:0.2,x:-0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:-1.5,y:-2,z:-1},{c:0xeeeeee,s:0.2,x:0.5,y:-1.2,z:0.2},{c:0xeeeeee,s:0.2,x:1.5,y:-2,z:-1}], b: [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:4},{f:4,t:5},{f:5,t:0}], i: false, z: 8},
-        {id: 'nacl-box', a: [{c:0x8A2BE2,s:0.65,x:-0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:0.6,y:0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:-0.6,z:0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:-0.6,z:0.6},{c:0x00ff00,s:0.65,x:-0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:0.6,y:0.6,z:-0.6},{c:0x8A2BE2,s:0.65,x:-0.6,y:-0.6,z:-0.6},{c:0x00ff00,s:0.65,x:0.6,y:-0.6,z:0.6}], b: [], i: true, z: 5},
+         {
+    id: 'nacl-box', 
+    // I replaced the old atoms array with these 14 coordinates:
+    a: [
+        {c:0x8A2BE2, s:0.65, x:-1, y:1, z:1},  {c:0x00ff00, s:0.65, x:1, y:1, z:1},
+        {c:0x00ff00, s:0.65, x:-1, y:1, z:-1}, {c:0x8A2BE2, s:0.65, x:1, y:1, z:-1},
+        {c:0x00ff00, s:0.65, x:-1, y:-1, z:1}, {c:0x8A2BE2, s:0.65, x:1, y:-1, z:1},
+        {c:0x8A2BE2, s:0.65, x:-1, y:-1, z:-1},{c:0x00ff00, s:0.65, x:1, y:-1, z:-1},
+        {c:0x8A2BE2, s:0.65, x:0, y:0, z:1},    {c:0x8A2BE2, s:0.65, x:0, y:0, z:-1},
+        {c:0x00ff00, s:0.65, x:1, y:0, z:0},    {c:0x00ff00, s:0.65, x:-1, y:0, z:0},
+        {c:0x8A2BE2, s:0.65, x:0, y:1, z:0},    {c:0x8A2BE2, s:0.65, x:0, y:-1, z:0}
+    ], 
+    b: [], 
+    i: true, 
+    z: 5
+},                               
         {id: 'ethanol-box', a: [{c:0x333333,s:0.5,x:-0.7,y:0,z:0},{c:0x333333,s:0.5,x:0.7,y:0,z:0},{c:0xff0000,s:0.45,x:1.5,y:0.7,z:0},{c:0xeeeeee,s:0.25,x:2.1,y:0.3,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:0.7,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.7,z:-0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:0,z:-1},{c:0xeeeeee,s:0.25,x:0.7,y:-0.8,z:0.5},{c:0xeeeeee,s:0.25,x:0.7,y:0.8,z:-0.5}], b: [{f:0,t:1},{f:1,t:2},{f:2,t:3},{f:0,t:4},{f:0,t:5},{f:0,t:6},{f:1,t:7},{f:1,t:8}], i: false, z: 5},
         {id: 'naoh-box', a: [{c:0x8A2BE2, s:0.65, x:-0.6, y:0, z:0}, {c:0xff0000, s:0.65, x:0.6, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.3, y:0, z:0}], b: [{f:1, t:2}], i: false, z: 5},
         {id: 'h2so4-box', a: [{c:0xffff00,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:0,y:-1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:0,z:0.5},{c:0xff0000,s:0.5,x:-1.1,y:0,z:-0.5},{c:0xeeeeee,s:0.25,x:1.6,y:0.6,z:0.5},{c:0xeeeeee,s:0.25,x:-1.6,y:-0.6,z:-0.5}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:3,t:5},{f:4,t:6}], i: false, z: 7},
