--- a/index.html
+++ b/index.html
@@ -162,7 +162,14 @@
         </div>
         <div id="ki-box" class="canvas-3d"></div>
     </div>
-
+<div class="molecule-entry">
+    <div class="molecule-title">VINEGAR (ACETIC ACID - CH3COOH)</div>
+    <div class="knowledge-box">
+        Acetic acid gives vinegar its sour taste and pungent smell. It is a weak acid used in food preservation and cooking.
+    </div>
+    <div id="vinegar-box" class="canvas-3d"></div>
+</div>
+    
         <script>
     // --- DATA ---
     const molData = [
@@ -190,7 +197,8 @@
         {id: 'h2so4-box', a: [{c:0xffff00,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:0,y:-1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:0,z:0.5},{c:0xff0000,s:0.5,x:-1.1,y:0,z:-0.5},{c:0xeeeeee,s:0.25,x:1.6,y:0.6,z:0.5},{c:0xeeeeee,s:0.25,x:-1.6,y:-0.6,z:-0.5}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:3,t:5},{f:4,t:6}], i: false, z: 7},
         {id: 'koh-box', a: [{c:0xc381fd, s:0.7, x:-0.7, y:0, z:0}, {c:0xff0000, s:0.65, x:0.7, y:0, z:0}, {c:0xeeeeee, s:0.35, x:1.4, y:0, z:0}], b: [{f:1, t:2}], i: false, z: 5},
         {id: 'hno3-box', a: [{c:0x0000ff,s:0.55,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0xff0000,s:0.5,x:1.1,y:-0.6,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.8,y:-0.2,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:3,t:4}], i: false, z: 6},
-        {id: 'ki-box', a: [{c:0xffff00,s:0.65,x:-0.65,y:0.65,z:0.65},{c:0x4b0082,s:0.65,x:0.65,y:0.65,z:0.65},{c:0x4b0082,s:0.65,x:-0.65,y:-0.65,z:0.65},{c:0xffff00,s:0.65,x:0.65,y:-0.65,z:0.65},{c:0x4b0082,s:0.65,x:-0.65,y:0.65,z:-0.65},{c:0xffff00,s:0.65,x:0.65,y:0.65,z:-0.65},{c:0xffff00,s:0.65,x:-0.65,y:-0.65,z:-0.65},{c:0x4b0082,s:0.65,x:0.65,y:-0.65,z:-0.65}], b: [], i: true, z: 5}
+        {id: 'ki-box', a: [{c:0xffff00,s:0.65,x:-0.65,y:0.65,z:0.65},{c:0x4b0082,s:0.65,x:0.65,y:0.65,z:0.65},{c:0x4b0082,s:0.65,x:-0.65,y:-0.65,z:0.65},{c:0xffff00,s:0.65,x:0.65,y:-0.65,z:0.65},{c:0x4b0082,s:0.65,x:-0.65,y:0.65,z:-0.65},{c:0xffff00,s:0.65,x:0.65,y:0.65,z:-0.65},{c:0xffff00,s:0.65,x:-0.65,y:-0.65,z:-0.65},{c:0x4b0082,s:0.65,x:0.65,y:-0.65,z:-0.65}], b: [], i: true, z: 5},
+        {id: 'vinegar-box', a: [{c:0x333333,s:0.5,x:0.5,y:0,z:0},{c:0x333333,s:0.5,x:-1,y:0,z:0},{c:0xff0000,s:0.45,x:1.1,y:1,z:0},{c:0xff0000,s:0.45,x:1.1,y:-1,z:0},{c:0xeeeeee,s:0.25,x:2,y:-1,z:0},{c:0xeeeeee,s:0.25,x:-1.4,y:1,z:0},{c:0xeeeeee,s:0.25,x:-1.4,y:-0.5,z:0.8},{c:0xeeeeee,s:0.25,x:-1.4,y:-0.5,z:-0.8}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:3,t:4},{f:1,t:5},{f:1,t:6},{f:1,t:7}], i: false, z: 6}
     ];
 
     let renderer, scene;
