--- a/index.html
+++ b/index.html
@@ -210,6 +210,13 @@
     </div>
     <div id="methane-box" class="canvas-3d"></div>
     </div>
+    <div class="molecule-entry">
+    <div class="molecule-title">CHLOROPHYLL (CORE STRUCTURE)</div>
+    <div class="knowledge-box">
+        The green pigment found in cyanobacteria and the chloroplasts of algae and plants. It is essential for photosynthesis, allowing plants to absorb energy from light.
+    </div>
+    <div id="chlorophyll-box" class="canvas-3d"></div>
+    </div>
         <script>
     // --- DATA ---
     const molData = [
@@ -242,7 +249,8 @@
         {id: 'caco3-box', a: [{c:0x5efff4,s:0.7,x:-0.8,y:0,z:0},{c:0x333333,s:0.5,x:0.8,y:0,z:0},{c:0xff0000,s:0.45,x:0.8,y:1,z:0},{c:0xff0000,s:0.45,x:1.7,y:-0.5,z:0},{c:0xff0000,s:0.45,x:-0.1,y:-0.5,z:0}], b: [{f:1,t:2},{f:1,t:3},{f:1,t:4}], i: false, z: 5},
         {id: 'h2o2-box', a: [{c:0xff0000,s:0.55,x:-0.5,y:0,z:0},{c:0xff0000,s:0.55,x:0.5,y:0,z:0},{c:0xeeeeee,s:0.3,x:-1,y:0.7,z:0.3},{c:0xeeeeee,s:0.3,x:1,y:-0.7,z:0.3}], b: [{f:0,t:1},{f:0,t:2},{f:1,t:3}], i: false, z: 5},
         {id: 'glycerin-box', a: [{c:0x333333,s:0.5,x:-1.2,y:0,z:0},{c:0x333333,s:0.5,x:0,y:0,z:0},{c:0x333333,s:0.5,x:1.2,y:0,z:0},{c:0xff0000,s:0.45,x:-1.2,y:1,z:0.5},{c:0xff0000,s:0.45,x:0,y:1,z:-0.5},{c:0xff0000,s:0.45,x:1.2,y:1,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:1.5,z:0.5},{c:0xeeeeee,s:0.25,x:0,y:1.5,z:-0.5},{c:0xeeeeee,s:0.25,x:1.2,y:1.5,z:0.5},{c:0xeeeeee,s:0.2,x:-1.8,y:-0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-1.8,y:-0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:0,y:-0.8,z:0},{c:0xeeeeee,s:0.2,x:1.8,y:-0.5,z:0.5},{c:0xeeeeee,s:0.2,x:1.8,y:-0.5,z:-0.5}], b: [{f:0,t:1},{f:1,t:2},{f:0,t:3},{f:1,t:4},{f:2,t:5},{f:3,t:6},{f:4,t:7},{f:5,t:8},{f:0,t:9},{f:0,t:10},{f:1,t:11},{f:2,t:12},{f:2,t:13}], i: false, z: 7},
-        {id: 'methane-box', a: [{c:0x333333,s:0.6,x:0,y:0,z:0},{c:0xeeeeee,s:0.3,x:1,y:1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:-1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:1,z:-1},{c:0xeeeeee,s:0.3,x:1,y:-1,z:-1}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4}], i: false, z: 6}
+        {id: 'methane-box', a: [{c:0x333333,s:0.6,x:0,y:0,z:0},{c:0xeeeeee,s:0.3,x:1,y:1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:-1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:1,z:-1},{c:0xeeeeee,s:0.3,x:1,y:-1,z:-1}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4}], i: false, z: 6},
+        {id: 'chlorophyll-box', a: [{c:0x32cd32,s:0.6,x:0,y:0,z:0},{c:0x333333,s:0.5,x:1.4,y:1.4,z:0},{c:0x333333,s:0.5,x:-1.4,y:1.4,z:0},{c:0x333333,s:0.5,x:-1.4,y:-1.4,z:0},{c:0x333333,s:0.5,x:1.4,y:-1.4,z:0},{c:0xff0000,s:0.45,x:0,y:2.2,z:0.5},{c:0xff0000,s:0.45,x:0,y:-2.2,z:0.5},{c:0x333333,s:0.5,x:2.5,y:0,z:0},{c:0x333333,s:0.5,x:-2.5,y:0,z:0},{c:0xeeeeee,s:0.25,x:3.2,y:0.5,z:0},{c:0xeeeeee,s:0.25,x:-3.2,y:0.5,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:1,t:7},{f:2,t:8},{f:7,t:9},{f:8,t:10}], i: false, z: 12}
     ];
 
     let renderer, scene;
