Update molecule titles to use subscript formatting

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <div class="molecule-entry">
-        <div class="molecule-title">H2O (Water)</div>
+        <div class="molecule-title">H<sub>2</sub>O (Water)</div>
         <div class="knowledge-box">
             The universal solvent. It has a bent molecular geometry due to lone pairs.
         </div>
@@ -118,7 +118,7 @@
     </div>
 
     <div class="molecule-entry">
-        <div class="molecule-title">Glucose (C6H12O6)</div>
+        <div class="molecule-title">Glucose (C<sub>6</sub>H<sub>12</sub></sub>O<sub>6</sub>)</div>
         <div class="knowledge-box">
             Primary energy source for cells. 24 atoms held by covalent bonds.
         </div>
