Update molecule titles to include subscripts

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div id="nacl-box" class="canvas-3d"></div>
     </div>
 <div class="molecule-entry">
-        <div class="molecule-title">Ethanol (C2H5OH)</div>
+        <div class="molecule-title">Ethanol (C<sub>2</sub>H<sub>5</sub>OH)</div>
         <div class="knowledge-box">
             Common alcohol found in beverages. It has a hydroxyl group (-OH) attached to an ethyl chain.
         </div>
@@ -147,7 +147,7 @@
         <div id="naoh-box" class="canvas-3d"></div>
             </div>
       <div class="molecule-entry">
-        <div class="molecule-title">Sulfuric Acid (H2SO4)</div>
+        <div class="molecule-title">Sulfuric Acid (H<sub>2</sub>SO<sub>4</sub>)</div>
         <div class="knowledge-box">
             A highly corrosive strong mineral acid. Known historically as "oil of vitriol."
         </div>
@@ -161,7 +161,7 @@
         <div id="koh-box" class="canvas-3d"></div>
  </div>
     <div class="molecule-entry">
-        <div class="molecule-title">Nitric Acid (HNO3)</div>
+        <div class="molecule-title">Nitric Acid (HNO<sub>3</sub>)</div>
         <div class="knowledge-box">
             A highly corrosive mineral acid. It is used in the production of fertilizers and explosives.
         </div>
@@ -175,14 +175,14 @@
         <div id="ki-box" class="canvas-3d"></div>
     </div>
 <div class="molecule-entry">
-    <div class="molecule-title">VINEGAR (ACETIC ACID - CH3COOH)</div>
+    <div class="molecule-title">VINEGAR (ACETIC ACID - CH<sub>3</sub>COOH)</div>
     <div class="knowledge-box">
         Acetic acid gives vinegar its sour taste and pungent smell. It is a weak acid used in food preservation and cooking.
     </div>
     <div id="vinegar-box" class="canvas-3d"></div>
 </div>
     <div class="molecule-entry">
-    <div class="molecule-title">CALCIUM CARBONATE (CaCO3)</div>
+    <div class="molecule-title">CALCIUM CARBONATE (CaCO<sub>3</sub>)</div>
     <div class="knowledge-box">
         Commonly found in rocks as the minerals calcite and aragonite. It is the main component of pearls and the shells of marine organisms, snails, and eggs.
     </div>
@@ -190,21 +190,21 @@
     </div>
 
 <div class="molecule-entry">
-    <div class="molecule-title">HYDROGEN PEROXIDE (H2O2)</div>
+    <div class="molecule-title">HYDROGEN PEROXIDE (H<sub>2</sub>O<sub>2</sub>)</div>
     <div class="knowledge-box">
         A pale blue, clear liquid, slightly more viscous than water. It is used as an oxidizer, bleaching agent, and antiseptic.
     </div>
     <div id="h2o2-box" class="canvas-3d"></div>
 </div>
     <div class="molecule-entry">
-    <div class="molecule-title">GLYCERIN (C3H8O3)</div>
+    <div class="molecule-title">GLYCERIN (C<sub>3</sub>H<sub>8</sub>O<sub>3</sub>)</div>
     <div class="knowledge-box">
         A viscous, sweet-tasting liquid. It has three hydroxyl groups (-OH) which make it highly soluble in water and hygroscopic.
     </div>
     <div id="glycerin-box" class="canvas-3d"></div>
     </div>
     <div class="molecule-entry">
-    <div class="molecule-title">METHANE (CH4)</div>
+    <div class="molecule-title">METHANE (CH<sub>4</sub>)</div>
     <div class="knowledge-box">
         The simplest hydrocarbon and the primary component of natural gas. It has a tetrahedral geometry with bond angles of 109.5 degrees.
     </div>
