--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
     </div>
     <div id="baking-soda-box" class="canvas-3d"></div>
     </div>
+    <div class="molecule-entry">
+    <div class="molecule-title">AMMONIA (NH<sub>3</sub>)</div>
+    <div class="knowledge-box">
+        A colorless gas with a characteristic pungent smell. It is a stable binary hydride and serves as a precursor to many food and fertilizer products.
+    </div>
+    <div id="ammonia-box" class="canvas-3d"></div>
+    </div>
         <script>
     // --- DATA ---
     const molData = [
@@ -258,7 +265,8 @@
         {id: 'glycerin-box', a: [{c:0x333333,s:0.5,x:-1.2,y:0,z:0},{c:0x333333,s:0.5,x:0,y:0,z:0},{c:0x333333,s:0.5,x:1.2,y:0,z:0},{c:0xff0000,s:0.45,x:-1.2,y:1,z:0.5},{c:0xff0000,s:0.45,x:0,y:1,z:-0.5},{c:0xff0000,s:0.45,x:1.2,y:1,z:0.5},{c:0xeeeeee,s:0.25,x:-1.2,y:1.5,z:0.5},{c:0xeeeeee,s:0.25,x:0,y:1.5,z:-0.5},{c:0xeeeeee,s:0.25,x:1.2,y:1.5,z:0.5},{c:0xeeeeee,s:0.2,x:-1.8,y:-0.5,z:0.5},{c:0xeeeeee,s:0.2,x:-1.8,y:-0.5,z:-0.5},{c:0xeeeeee,s:0.2,x:0,y:-0.8,z:0},{c:0xeeeeee,s:0.2,x:1.8,y:-0.5,z:0.5},{c:0xeeeeee,s:0.2,x:1.8,y:-0.5,z:-0.5}], b: [{f:0,t:1},{f:1,t:2},{f:0,t:3},{f:1,t:4},{f:2,t:5},{f:3,t:6},{f:4,t:7},{f:5,t:8},{f:0,t:9},{f:0,t:10},{f:1,t:11},{f:2,t:12},{f:2,t:13}], i: false, z: 7},
         {id: 'methane-box', a: [{c:0x333333,s:0.6,x:0,y:0,z:0},{c:0xeeeeee,s:0.3,x:1,y:1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:-1,z:1},{c:0xeeeeee,s:0.3,x:-1,y:1,z:-1},{c:0xeeeeee,s:0.3,x:1,y:-1,z:-1}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4}], i: false, z: 6},
         {id: 'chlorophyll-box', a: [{c:0x32cd32,s:0.6,x:0,y:0,z:0},{c:0x333333,s:0.5,x:1.4,y:1.4,z:0},{c:0x333333,s:0.5,x:-1.4,y:1.4,z:0},{c:0x333333,s:0.5,x:-1.4,y:-1.4,z:0},{c:0x333333,s:0.5,x:1.4,y:-1.4,z:0},{c:0xff0000,s:0.45,x:0,y:2.2,z:0.5},{c:0xff0000,s:0.45,x:0,y:-2.2,z:0.5},{c:0x333333,s:0.5,x:2.5,y:0,z:0},{c:0x333333,s:0.5,x:-2.5,y:0,z:0},{c:0xeeeeee,s:0.25,x:3.2,y:0.5,z:0},{c:0xeeeeee,s:0.25,x:-3.2,y:0.5,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:0,t:4},{f:1,t:7},{f:2,t:8},{f:7,t:9},{f:8,t:10}], i: false, z: 12},
-        {id: 'baking-soda-box', a: [{c:0x8A2BE2,s:0.6,x:-1.2,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0,z:0},{c:0xff0000,s:0.45,x:0.5,y:1.1,z:0},{c:0xff0000,s:0.45,x:1.5,y:-0.6,z:0},{c:0xff0000,s:0.45,x:-0.5,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.6,z:0}], b: [{f:1,t:2},{f:1,t:3},{f:1,t:4},{f:4,t:5}], i: false, z: 6}
+        {id: 'baking-soda-box', a: [{c:0x8A2BE2,s:0.6,x:-1.2,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0,z:0},{c:0xff0000,s:0.45,x:0.5,y:1.1,z:0},{c:0xff0000,s:0.45,x:1.5,y:-0.6,z:0},{c:0xff0000,s:0.45,x:-0.5,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.6,z:0}], b: [{f:1,t:2},{f:1,t:3},{f:1,t:4},{f:4,t:5}], i: false, z: 6},
+        {id: 'ammonia-box', a: [{c:0x0000ff,s:0.6,x:0,y:0.3,z:0},{c:0xeeeeee,s:0.3,x:0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:-0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:0,y:-0.4,z:-0.9}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3}], i: false, z: 5}
     ];
 
     let renderer, scene;
