--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
     </div>
     <div id="mgoh2-box" class="canvas-3d"></div>
     </div>
+    <div class="molecule-entry">
+    <div class="molecule-title">ETHYLENE (C<sub>2</sub>H<sub>4</sub>)</div>
+    <div class="knowledge-box">
+        Also called ethene. It is a gaseous hydrocarbon that is the simplest alkene. In biology, it acts as a hormone that signals fruit to ripen and flowers to wilt.
+    </div>
+    <div id="ethylene-box" class="canvas-3d"></div>
+    </div>
         <script>
     // --- DATA ---
     const molData = [
@@ -282,7 +289,8 @@
         {id: 'baking-soda-box', a: [{c:0x8A2BE2,s:0.6,x:-1.2,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0,z:0},{c:0xff0000,s:0.45,x:0.5,y:1.1,z:0},{c:0xff0000,s:0.45,x:1.5,y:-0.6,z:0},{c:0xff0000,s:0.45,x:-0.5,y:-0.6,z:0},{c:0xeeeeee,s:0.25,x:-1.2,y:-0.6,z:0}], b: [{f:1,t:2},{f:1,t:3},{f:1,t:4},{f:4,t:5}], i: false, z: 6},
         {id: 'ammonia-box', a: [{c:0x0000ff,s:0.6,x:0,y:0.3,z:0},{c:0xeeeeee,s:0.3,x:0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:-0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:0,y:-0.4,z:-0.9}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3}], i: false, z: 5},
         {id: 'acetone-box', a: [{c:0x333333,s:0.5,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0x333333,s:0.5,x:-1.1,y:-0.7,z:0},{c:0x333333,s:0.5,x:1.1,y:-0.7,z:0},{c:0xeeeeee,s:0.25,x:-1.1,y:-1.3,z:0.8},{c:0xeeeeee,s:0.25,x:-1.1,y:-1.3,z:-0.8},{c:0xeeeeee,s:0.25,x:-1.9,y:-0.3,z:0},{c:0xeeeeee,s:0.25,x:1.1,y:-1.3,z:0.8},{c:0xeeeeee,s:0.25,x:1.1,y:-1.3,z:-0.8},{c:0xeeeeee,s:0.25,x:1.9,y:-0.3,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:2,t:4},{f:2,t:5},{f:2,t:6},{f:3,t:7},{f:3,t:8},{f:3,t:9}], i: false, z: 7},
-        {id: 'mgoh2-box', a: [{c:0x32cd32,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:1.1,y:0.4,z:0},{c:0xeeeeee,s:0.3,x:1.8,y:0.4,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.4,z:0},{c:0xeeeeee,s:0.3,x:-1.8,y:-0.4,z:0}], b: [{f:1,t:2},{f:3,t:4}], i: false, z: 6}
+        {id: 'mgoh2-box', a: [{c:0x32cd32,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:1.1,y:0.4,z:0},{c:0xeeeeee,s:0.3,x:1.8,y:0.4,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.4,z:0},{c:0xeeeeee,s:0.3,x:-1.8,y:-0.4,z:0}], b: [{f:1,t:2},{f:3,t:4}], i: false, z: 6},
+        {id: 'ethylene-box', a: [{c:0x333333,s:0.55,x:-0.65,y:0,z:0},{c:0x333333,s:0.55,x:0.65,y:0,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:-0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:-0.8,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:1,t:4},{f:1,t:5}], i: false, z: 5}
     ];
 
     let renderer, scene;
