--- a/index.html
+++ b/index.html
@@ -252,6 +252,13 @@
     </div>
     <div id="ethylene-box" class="canvas-3d"></div>
     </div>
+    <div class="molecule-entry">
+    <div class="molecule-title">SODIUM CYANIDE (NaCN)</div>
+    <div class="knowledge-box">
+        An inorganic compound that is a white, water-soluble solid. It is highly toxic and is used industrially in gold mining and chemical synthesis.
+    </div>
+    <div id="nacn-box" class="canvas-3d"></div>
+    </div>
         <script>
     // --- DATA ---
     const molData = [
@@ -290,7 +297,8 @@
         {id: 'ammonia-box', a: [{c:0x0000ff,s:0.6,x:0,y:0.3,z:0},{c:0xeeeeee,s:0.3,x:0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:-0.9,y:-0.4,z:0.5},{c:0xeeeeee,s:0.3,x:0,y:-0.4,z:-0.9}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3}], i: false, z: 5},
         {id: 'acetone-box', a: [{c:0x333333,s:0.5,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:0,y:1.2,z:0},{c:0x333333,s:0.5,x:-1.1,y:-0.7,z:0},{c:0x333333,s:0.5,x:1.1,y:-0.7,z:0},{c:0xeeeeee,s:0.25,x:-1.1,y:-1.3,z:0.8},{c:0xeeeeee,s:0.25,x:-1.1,y:-1.3,z:-0.8},{c:0xeeeeee,s:0.25,x:-1.9,y:-0.3,z:0},{c:0xeeeeee,s:0.25,x:1.1,y:-1.3,z:0.8},{c:0xeeeeee,s:0.25,x:1.1,y:-1.3,z:-0.8},{c:0xeeeeee,s:0.25,x:1.9,y:-0.3,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:2,t:4},{f:2,t:5},{f:2,t:6},{f:3,t:7},{f:3,t:8},{f:3,t:9}], i: false, z: 7},
         {id: 'mgoh2-box', a: [{c:0x32cd32,s:0.65,x:0,y:0,z:0},{c:0xff0000,s:0.5,x:1.1,y:0.4,z:0},{c:0xeeeeee,s:0.3,x:1.8,y:0.4,z:0},{c:0xff0000,s:0.5,x:-1.1,y:-0.4,z:0},{c:0xeeeeee,s:0.3,x:-1.8,y:-0.4,z:0}], b: [{f:1,t:2},{f:3,t:4}], i: false, z: 6},
-        {id: 'ethylene-box', a: [{c:0x333333,s:0.55,x:-0.65,y:0,z:0},{c:0x333333,s:0.55,x:0.65,y:0,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:-0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:-0.8,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:1,t:4},{f:1,t:5}], i: false, z: 5}
+        {id: 'ethylene-box', a: [{c:0x333333,s:0.55,x:-0.65,y:0,z:0},{c:0x333333,s:0.55,x:0.65,y:0,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:-1.2,y:-0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:0.8,z:0},{c:0xeeeeee,s:0.3,x:1.2,y:-0.8,z:0}], b: [{f:0,t:1},{f:0,t:2},{f:0,t:3},{f:1,t:4},{f:1,t:5}], i: false, z: 5},
+        {id: 'nacn-box', a: [{c:0x8A2BE2,s:0.6,x:-1.0,y:0,z:0},{c:0x333333,s:0.5,x:0.5,y:0,z:0},{c:0x0000ff,s:0.5,x:1.5,y:0,z:0}], b: [{f:1,t:2}], i: false, z: 5}
     ];
 
     let renderer, scene;
@@ -369,7 +377,7 @@
         renderer.setScissorTest(true);
 
         scenes.forEach(scene => {
-            scene.userData.group.rotation.y += 0.045;
+            scene.userData.group.rotation.y += 0.05;
             const element = scene.userData.element;
             const rect = element.getBoundingClientRect();
 
